--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,12 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^4.0",
-    "squizlabs/php_codesniffer": "^2.0",
+    "squizlabs/php_codesniffer": "^3.0",
     "mikey179/vfsstream": "v1.6.4",
-    "gregwar/rst": "^1.0"
+    "gregwar/rst": "^1.0",
+    "phpcompatibility/php-compatibility": "^9.2",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+    "slevomat/coding-standard": "^5.0"
   },
   "autoload": {
     "psr-0": {
@@ -55,6 +58,13 @@
   ],
   "scripts": {
     "test": "phpunit",
+    "dev:phpunit": "phpunit ",
+    "dev:phpcs": "phpcs -p",
+    "dev:fix": "phpcbf -p",
+    "dev:check": [
+      "@dev:phpcs",
+      "@dev:phpunit"
+    ],
     "cs-check": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 ./src/main/php ./src/test/php",
     "cs-fix": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 ./src/main/php ./src/test/php"
   }
